--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="bg">
   <div class="title">哈利波特与魔法世界</div>
   <div class="container">
-    <div class="section" onclick="location.href='file:///D:/BFSU/2024春%20研一下/翻译与本地化/网页作业1/1作者简介.html';">
+    <div class="section" onclick="location.href='file://1作者简介.html';">
       <h2>作者简介</h2>
       <p>J.K. Rowling与《哈利波特》创作</p>
     </div>
